--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,17 @@
 TODO list:
 
  - add list support for user and cmd in bw_list
- - support adding bookmarks outside of audios or videos
  - fix JabberBot's subscription logic
  - add ping command
  - add isup command
  - add way to specify highest directory in tree when searching
- - add redo command
  - add realjid command
+ - make redo command per chat instead of global
+ - add logic checks to rejoin
+ - add chat_ctrl check to join command
+ - edit example config to include note_file
+ - add wiki entry on notes
+ - add subtitle logic for files without them
 
 MAYBE list:
 
