--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,6 @@
 TODO list:
 
  - does muc_join_room need error checking?
- - add option for command prefix ala !
  - add list support for user and cmd in bw_list
  - fix JabberBot's subscription logic
  - add ping command
@@ -22,3 +21,9 @@ MAYBE list:
  - allow user to set requests timeout (currently 60s)
  - read and search media tags (e.g. title, album, artist from mp3)
  - allow specifying that some cmds only work for uesrs in the same room
+
+DOC list:
+
+ - add reconnect_wait option
+ - add ping_freq option
+ - add command_prefix option
