--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 TODO list:
 
+ - creeate actual config file and processing
  - does muc_join_room need error checking?
  - add list support for user and cmd in bw_list
  - add ping command
