--- a/TODO.txt
+++ b/TODO.txt
@@ -3,23 +3,19 @@ OVERHAUL list:
  - abstract out chat protocol (some sort of plugin framework)
  - create actual config file and processing
  - framework for custom functions
- - support multiple rooms
  - possibly revisit BW-list
  - redo DOCS following config rework
+ - review logging levels for everything
 
 TODO list:
 
- - catch SSLError from link_echo
- - does muc_join_room need error checking?
  - add list support for user and cmd in bw_list
  - add ping command
  - add isup command
- - add leave command
  - add remind command
  - add tell command
  - add stalk command
  - make redo command per chat instead of global
- - add logic checks to rejoin
  - edit example config to include note_file
  - add subtitle logic for files without them
 
@@ -28,7 +24,6 @@ MAYBE list:
  - switch from real JID dict to on execute requests
  - allow user to set requests timeout (currently 60s)
  - read and search media tags (e.g. title, album, artist from mp3)
- - allow specifying that some cmds only work for uesrs in the same room
 
 DOC list:
 
