--- a/TODO.txt
+++ b/TODO.txt
@@ -1,35 +1,68 @@
-OVERHAUL list:
+( - ) low priority, ( + ) normal priority, ( ! ) high priority, ( x ) done
+(jah) actively assigned to jah, (jef) actively assigned to jef
 
- - abstract out chat protocol (some sort of plugin framework)
- ! redo DOCS following config rework
- - review logging levels for everything
- ! implement unicode support
+OVERHAUL:
 
-TODO list:
+  (jah) abstract out chat protocol
+        (jah) define API for chat plugins
+        (jah) write skeleton chat plugin example file
+        (jah) refactor sibylbot and jabberbot (make jabberbot a chat plug-in)
+        (jah) plug-in framework for chat (including config option)
+        (jah) add config option
+        (jah) add docs page about chat plug-in API
 
- ! add config to enable/disable plugins
- ! add dependencies to cmds framework
- ! add auto-bw-list entries for chat_ctrl commands
- - comment everything
- - add ping command
- - add isup command
- - add remind command
- - add tell command
- - add stalk command
- - add subtitle logic for files without them
+  (jef) write matrix plug-in
+        (jef) work with @jah on above
+        (jef) write and test plug-in
+        (jef) write wiki page
 
-MAYBE list:
+  ( + ) finish cmds plug-in framework
+        ( + ) implement dependency checking
+        ( + ) add config options to disable plug-ins
 
- - switch from real JID dict to on execute requests
- - allow user to set requests timeout (currently 60s)
- - read and search media tags (e.g. title, album, artist from mp3)
- - allow searching xbmc library
- - daemonize inside python
+  ( ! ) finish redo-ing docs to reflect plug-ins changes
+        ( ! ) home page
+        ( ! ) config
+        ( x ) b/w list
+        ( x ) writing plug-ins intro
+        ( + ) writing plug-in example (alarm)
+        ( + ) add dependencies info to plug-in pages
+        ( x ) bookmark.py
+        ( ! ) general.py
+        ( x ) library.py
+        ( ! ) muc.py
+        ( ! ) note.py
+        ( ! ) xbmc.py
 
-DOC list:
+  ( + ) add extended help text to all commands accessible via "help" cmd
 
- - add reconnect_wait option
- - add ping_freq option
- - add command_prefix option
- - add link_echo option
- - add wiki entry on notes
+  ( - ) review logging
+        ( - ) audit existing levels
+        ( - ) add lots of debug info to all commands
+        ( - ) remove/control "requests" library logging
+
+  ( - ) figure out if unicode is broken anywhere (xmpppy returns unicode msgs)
+
+  ( + ) review and add comments to everything
+
+GENERAL:
+
+  ( + ) add chat_ctrl option to config framework
+        ( + ) additional parameter to @botconf dictionaries
+        ( + ) auto-gen bw/list black entry for chat_ctrl cmds
+
+COMMANDS:
+
+  ( - ) add ping command
+  ( + ) add isup command
+  ( - ) add remind command (send msg highlighting user at specified time)
+  ( + ) add tell command (send msg when specified user joins room)
+  ( - ) add stalk command (send msg when specified user changes to avilable)
+
+MAYBE:
+
+  ( - ) switch from real JID dict to on execute requests
+  ( - ) allow user to set requests timeout (currently 60s)
+  ( - ) read and search media tags (e.g. title, album, artist from mp3)
+  ( - ) allow searching xbmc library
+  ( - ) daemonize inside python
